--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,3 @@
-@import './css/theme.css';
-
-body {
-  margin: 0;
-  font-family: var(--font-family);
-  background-color: var(--color-background);
-  color: var(--color-text);
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-main {
-  flex-grow: 1;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
