--- a/frontend/src/styles/tailwind/layers/components.css
+++ b/frontend/src/styles/tailwind/layers/components.css
@@ -6,7 +6,7 @@
     @apply inline-flex items-center justify-center 
 		       font-semibold text-center rounded-md
 		       cursor-pointer transition-all duration-200
-		       border shadow-md px-6 py-2 border-transparent;
+		       border  shadow-md px-6 py-2 border-transparent;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* custom subtle shadow */
   }
 
@@ -18,33 +18,38 @@
   /* =========================
 	   Variants
 	========================= */
+
   .btn-primary {
-    @apply btn bg-primary border-primary text-buttonText;
+    @apply btn bg-primary  text-buttonText;
   }
 
   .btn-secondary {
-    @apply btn bg-secondary border-secondary text-buttonText;
+    @apply btn bg-secondary  text-buttonText;
   }
 
   .btn-third {
-    @apply btn bg-accent border-accent text-buttonText;
+    @apply btn bg-accent  text-buttonText;
   }
 
   .btn-success {
-    @apply btn bg-success border-success text-buttonText;
+    @apply btn bg-success  text-buttonText;
   }
 
   .btn-danger {
-    @apply btn bg-danger border-danger text-buttonText;
+    @apply btn bg-danger  text-buttonText;
   }
 
   .btn-info {
-    @apply btn bg-info border-info text-buttonText;
+    @apply btn bg-info  text-buttonText;
   }
 
+  .btn-cancel {
+    @apply btn rounded-md  border-border bg-surface text-textSecondary;
+  }
   /* =========================
 	   Disabled State
 	========================= */
+
   .btn:disabled {
     @apply opacity-50 cursor-not-allowed shadow-none;
   }
@@ -68,5 +73,8 @@
 		       bg-background text-text 
 		       focus:outline-none focus:ring-2 
 		       focus:ring-primary transition;
+  }
+  .dialog-frame {
+    @apply rounded-lg shadow-xl border border-border bg-surface;
   }
 }
