--- a/frontend/src/styles/tailwind/layers/components.css
+++ b/frontend/src/styles/tailwind/layers/components.css
@@ -46,6 +46,16 @@
   .btn-cancel {
     @apply btn rounded-md  border-border bg-surface text-textSecondary;
   }
+
+  /* tailwind.css or your @layer components section */
+  .btn-circle-x {
+    @apply w-8 h-8 flex items-center justify-center 
+         rounded-full border border-border 
+         bg-background text-text 
+         hover:bg-red-600 hover:text-white 
+         transition;
+  }
+
   /* =========================
 	   Disabled State
 	========================= */
@@ -68,22 +78,21 @@
   /* =========================
 	   Input
 	========================= */
-  .input-border {
+  .input-box {
     @apply border border-border rounded-lg 
 		       bg-background text-text 
 		       focus:outline-none focus:ring-2 
 		       focus:ring-primary transition;
   }
-  .dialog-frame {
+  .dialog-box {
     @apply rounded-lg shadow-xl border border-border bg-surface;
   }
 
-  /* tailwind.css or your @layer components section */
-  .circle-x-button {
-    @apply w-8 h-8 flex items-center justify-center 
-         rounded-full border border-border 
-         bg-background text-text 
-         hover:bg-red-600 hover:text-white 
-         transition;
+  .surface-box {
+    @apply bg-surface rounded-lg shadow-xl;
+  }
+
+  .tag-box {
+    @apply bg-accent text-text px-2 py-1 rounded text-xs font-semibold shadow;
   }
 }
