--- a/frontend/src/styles/tailwind/layers/components.css
+++ b/frontend/src/styles/tailwind/layers/components.css
@@ -80,9 +80,13 @@
 	========================= */
   .input-box {
     @apply border border-border rounded-lg 
-		       bg-background text-text 
-		       focus:outline-none focus:ring-2 
-		       focus:ring-primary transition;
+		  text-text  bg-background
+		  focus:outline-none focus:ring-2 
+		  focus:ring-primary transition
+      appearance-none 
+		  [&::-webkit-outer-spin-button]:appearance-none 
+		  [&::-webkit-inner-spin-button]:appearance-none 
+		  [moz-appearance:textfield];
   }
   .dialog-box {
     @apply rounded-lg shadow-xl border border-border bg-surface;
