--- a/frontend/src/styles/tailwind/layers/components.css
+++ b/frontend/src/styles/tailwind/layers/components.css
@@ -6,7 +6,7 @@
     @apply inline-flex items-center justify-center 
 		       font-semibold text-center rounded-md
 		       cursor-pointer transition-all duration-200
-		       border  shadow-md px-6 py-2 border-transparent;
+		        shadow-md px-6 py-2;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* custom subtle shadow */
   }
 
@@ -32,11 +32,15 @@
   }
 
   .btn-success {
-    @apply btn bg-success  text-buttonText;
+    @apply btn bg-success border-success text-buttonText;
   }
 
   .btn-danger {
-    @apply btn bg-danger  text-buttonText;
+    @apply btn bg-danger border-border text-buttonText;
+  }
+
+  .btn-plain {
+    @apply btn border border-border text-text;
   }
 
   .btn-info {
@@ -50,9 +54,9 @@
   /* tailwind.css or your @layer components section */
   .btn-circle-x {
     @apply w-8 h-8 flex items-center justify-center 
-         rounded-full border border-border 
-         bg-background text-text 
-         hover:bg-red-600 hover:text-white 
+         rounded-full
+         text-text 
+         hover:bg-danger
          transition;
   }
 
