--- a/frontend/src/styles/tailwind/layers/components.css
+++ b/frontend/src/styles/tailwind/layers/components.css
@@ -6,10 +6,14 @@
     @apply inline-flex items-center justify-center 
 		       font-semibold text-center rounded-md
 		       cursor-pointer transition-all duration-200
-		        shadow-md px-6 py-2;
+		       shadow-md px-6 py-2;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* custom subtle shadow */
   }
 
+  .btn:hover {
+    @apply -translate-y-0.5;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  }
   .btn:active {
     @apply -translate-y-1;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
